--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,5 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap");
 html {
-  font-family: sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
